tools_sources = files(
  'enter_plan_mode/enter_plan_mode_entry.cpp',
  'enter_plan_mode/enter_plan_mode_security.cpp',
  'exit_plan_mode/exit_plan_mode_entry.cpp',
  'exit_plan_mode/exit_plan_mode_security.cpp',
  'sqlite_create_db/sqlite_create_db_entry.cpp',
  'sqlite_create_db/sqlite_create_db_security.cpp',
  'sqlite_delete_db/sqlite_delete_db_entry.cpp',
  'sqlite_delete_db/sqlite_delete_db_security.cpp',
  'sqlite_list_db/sqlite_list_db_entry.cpp',
  'sqlite_list_db/sqlite_list_db_security.cpp',
  'sqlite_perform/sqlite_perform_entry.cpp',
  'sqlite_perform/sqlite_perform_security.cpp',
  'agent_add_todo/agent_add_todo_entry.cpp',
  'agent_add_todo/agent_add_todo_security.cpp',
  'list_tool_calls/list_tool_calls_entry.cpp',
  'list_tool_calls/list_tool_calls_security.cpp',
  'agent_list_todos/agent_list_todos_entry.cpp',
  'agent_list_todos/agent_list_todos_security.cpp',
  'agent_complete_todo/agent_complete_todo_entry.cpp',
  'agent_complete_todo/agent_complete_todo_security.cpp',
  'agent_mark_episode/agent_mark_episode_entry.cpp',
  'agent_mark_episode/agent_mark_episode_security.cpp',
  'agent_compress_history/agent_compress_history_entry.cpp',
  'agent_compress_history/agent_compress_history_security.cpp',
  'agent_restore_context/agent_restore_context_entry.cpp',
  'agent_restore_context/agent_restore_context_security.cpp',
  'agent_pop_todo/agent_pop_todo_entry.cpp',
  'agent_pop_todo/agent_pop_todo_security.cpp',
  'agent_delete_todo/agent_delete_todo_entry.cpp',
  'agent_delete_todo/agent_delete_todo_security.cpp',
  'agent_list/agent_list_entry.cpp',
  'agent_list/agent_list_security.cpp',
  'agent_create/agent_create_entry.cpp',
  'agent_create/agent_create_security.cpp',
  'agent_status/agent_status_entry.cpp',
  'agent_status/agent_status_security.cpp',
  'agent_end/agent_end_entry.cpp',
  'agent_end/agent_end_security.cpp',
  'agent_todo_status/agent_todo_status_entry.cpp',
  'agent_todo_status/agent_todo_status_security.cpp',
  'agent_set_status/agent_set_status_entry.cpp',
  'agent_set_status/agent_set_status_security.cpp',
  'code_get_scope/code_get_scope_entry.cpp',
  'code_get_scope/code_get_scope_security.cpp',
  'code_get_definition/code_get_definition_entry.cpp',
  'code_get_definition/code_get_definition_security.cpp',
  'code_get_references/code_get_references_entry.cpp',
  'code_get_references/code_get_references_security.cpp',
  'message_agent/message_agent_entry.cpp',
  'message_agent/message_agent_security.cpp',
  'agent_get_output/agent_get_output_entry.cpp',
  'agent_get_output/agent_get_output_security.cpp',
  'wait_for_agent/wait_for_agent_entry.cpp',
  'wait_for_agent/wait_for_agent_security.cpp',
  'run_python/run_python_entry.cpp',
  'run_python/run_python_security.cpp',
  'web_fetch/web_fetch_entry.cpp',
  'web_fetch/web_fetch_security.cpp',
  'run_shell_command/run_shell_command_entry.cpp',
  'run_shell_command/run_shell_command_security.cpp',
  'crashdump_list/crashdump_list_entry.cpp',
  'crashdump_list/crashdump_list_security.cpp',
  'crashdump_get_info/crashdump_get_info_entry.cpp',
  'crashdump_get_info/crashdump_get_info_security.cpp',
  'crashdump_clear/crashdump_clear_entry.cpp',
  'crashdump_clear/crashdump_clear_security.cpp',
  'get_temperature/get_temperature_entry.cpp',
  'get_temperature/get_temperature_security.cpp',
  'fs_file_size/fs_file_size_entry.cpp',
  'fs_file_size/fs_file_size_security.cpp',
  'fs_list_dir/fs_list_dir_entry.cpp',
  'fs_list_dir/fs_list_dir_security.cpp',
  'fs_mkdir/fs_mkdir_entry.cpp',
  'fs_mkdir/fs_mkdir_security.cpp',
  'git_status/git_status_entry.cpp',
  'git_status/git_status_security.cpp',
  'git_branch_list/git_branch_list_entry.cpp',
  'git_branch_list/git_branch_list_security.cpp',
  'git_branch_create/git_branch_create_entry.cpp',
  'git_branch_create/git_branch_create_security.cpp',
  'git_diff_unstaged/git_diff_unstaged_entry.cpp',
  'git_diff_unstaged/git_diff_unstaged_security.cpp',
  'git_diff_staged/git_diff_staged_entry.cpp',
  'git_diff_staged/git_diff_staged_security.cpp',
  'git_log/git_log_entry.cpp',
  'git_log/git_log_security.cpp',
  'git_add/git_add_entry.cpp',
  'git_add/git_add_security.cpp',
  'git_unstage/git_unstage_entry.cpp',
  'git_unstage/git_unstage_security.cpp',
  'git_restore/git_restore_entry.cpp',
  'git_restore/git_restore_security.cpp',
  'git_commit/git_commit_entry.cpp',
  'git_commit/git_commit_security.cpp',
  'git_init/git_init_entry.cpp',
  'git_init/git_init_security.cpp',
  'git_checkout_branch/git_checkout_branch_entry.cpp',
  'git_checkout_branch/git_checkout_branch_security.cpp',
  'git_diff_from_branch/git_diff_from_branch_entry.cpp',
  'git_diff_from_branch/git_diff_from_branch_security.cpp',
  'git_pull/git_pull_entry.cpp',
  'git_pull/git_pull_security.cpp',
  'git_push/git_push_entry.cpp',
  'git_push/git_push_security.cpp',
  'fs_read_lines/fs_read_lines_entry.cpp',
  'fs_read_lines/fs_read_lines_security.cpp',
  'fs_read_binary/fs_read_binary_entry.cpp',
  'fs_read_binary/fs_read_binary_security.cpp',
  'ask_user/ask_user_entry.cpp',
  'ask_user/ask_user_security.cpp',
  'activate_skill/activate_skill_entry.cpp',
  'activate_skill/activate_skill_security.cpp',
  'list_skills/list_skills_entry.cpp',
  'list_skills/list_skills_security.cpp',
  'get_current_datetime/get_current_datetime_entry.cpp',
  'get_current_datetime/get_current_datetime_security.cpp',
  'fs_find_in_files/fs_find_in_files_entry.cpp',
  'fs_find_in_files/fs_find_in_files_security.cpp',
  'fs_regexp_lines/fs_regexp_lines_entry.cpp',
  'fs_regexp_lines/fs_regexp_lines_security.cpp',
  'fs_compile_info/fs_compile_info_entry.cpp',
  'fs_compile_info/fs_compile_info_security.cpp',
  'fs_compile_summary/fs_compile_summary_entry.cpp',
  'fs_compile_summary/fs_compile_summary_security.cpp',
  'fs_compile_file/fs_compile_file_entry.cpp',
  'fs_compile_file/fs_compile_file_security.cpp',
  'fs_compile_project/fs_compile_project_entry.cpp',
  'fs_compile_project/fs_compile_project_security.cpp',
  'fs_run_tests/fs_run_tests_entry.cpp',
  'fs_run_tests/fs_run_tests_security.cpp',
  'fs_list_tests/fs_list_tests_entry.cpp',
  'fs_list_tests/fs_list_tests_security.cpp',
  'fs_write_file/fs_write_file_entry.cpp',
  'fs_write_file/fs_write_file_security.cpp',
  'fs_replace_lines/fs_replace_lines_entry.cpp',
  'fs_replace_lines/fs_replace_lines_security.cpp',
  'flag_as_error/flag_as_error_entry.cpp',
  'flag_as_error/flag_as_error_security.cpp',
  'clear_all_errors/clear_all_errors_entry.cpp',
  'clear_all_errors/clear_all_errors_security.cpp',
  'agent_set_timer/agent_set_timer_entry.cpp',
  'agent_set_timer/agent_set_timer_security.cpp',
  'agent_list_episodes/agent_list_episodes_entry.cpp',
  'agent_list_episodes/agent_list_episodes_security.cpp'
)
